Bug fixes to ether wrapping and rebalance algorithm

--- a/src/app/components/price/price.component.scss
+++ b/src/app/components/price/price.component.scss
@@ -1,5 +1,5 @@
 .priceInput {
-  width: 500px;
+  width: 600px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
